# AI-Resume-Analyzer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  utils.py
