[project]
name = "resume-critique"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-generativeai>=0.8.6",
    "openai>=2.44.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "reportlab>=5.0.0",
    "streamlit>=1.50.0",
    "streamlit-extras>=0.7.8",
]
